refactor: replace with getFirst